--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,12 @@
     transform: rotate(360deg);
   }
 }
-.link {
+.nav-item a {
   text-decoration: none;
+}
+a:hover {
+  color: white;
+}
+a.active {
+  color: red;
 }
